[package]
name = "test-crs"
version = "0.1.0"
edition = "2021"
authors = [ "Colin Daniels <colin.r.daniels@gmail.com>" ]

[dependencies]
pest = "2.2"
pest_derive = "2.2"
regex = "1.6"
thiserror = "1.0"
hyperscan = { version = "0.3" }
lazy_static = "1.4"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
glob = "0.3.0"
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1", features = ["full"] }
http = "0.2"
bytes = "1"
futures = "0.3"
futures-util = "0.3"
